<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>
    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    <string name="app_name">ESKill</string>

    <string name="sample_content">Sample of dragging the content.\nThe menu consists of a ListView, for which the
        active position is saved through configuration changes.\nAdditionally, if the menu is open, a back press will
        close it.
    </string>

    <string name="sample_window">Sample of dragging the entire window.\nThe menu is a simple ScrollView, with a click
        listener set on each item.\nThe drawer will animate slightly open, to make it more discoverable.\nAdditionally,
        if the menu is open, a back press will close it.
    </string>


    <!-- 菜单 -->
    <string name="common_drawer_top">用户名</string>
    <string name="common_drawer_display_district">展示墙</string>
    <string name="common_drawer_exchange_district">交换墙</string>
    <string name="common_drawer_achievement_district">成果墙</string>
    <string name="common_drawer_systemsetting_district">系统配置</string>
    <string name="common_drawer_contactus_district">联系我们</string>
    <string name="common_drawer_socialshare_district">社交分享</string>
    <string name="common_drawer_personalcenter_district">个人中心</string>
    <string name="common_drawer_title_district">ESer</string>
    <string name="navigation_title_realtime_preview">实时预览</string>
    <string name="navigation_title_sys_setting">设置</string>
    <string name="user_center_unlogin">点击登录</string>
    <string name="nothing" />

    <string name="device_listview_item_securityprotection">安全防护</string>

    <string name="action_random">Just a random icon</string>
    <string name="action_switch_custom">Use CustomView</string>
    <string name="action_switch_home_icon">Use Home icon</string>
    <string name="duration">DURATION</string>
    <string name="animate_menu">ANIM MENU</string>
    <string name="animate_arrow">ANIM ARROW</string>
    <string name="animate_check">ANIM CHECK</string>
    <string name="animate_x">ANIM X</string>
    <string name="set_menu">SET MENU</string>
    <string name="set_arrow">SET ARROW</string>
    <string name="set_x">SET X</string>
    <string name="set_check">SET CHECK</string>
    <string name="title_activity_custom_view">Material menu</string>
</resources>
