<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightcyan" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100.0dip"
            android:background="@color/seagreen"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/menu_drawer_top"
                style="@style/MenuDrawer.Widget.Title.Top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/menu_drawer_user"
                android:drawableStart="@drawable/menu_drawer_user"
                android:text="@string/common_drawer_top" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/menu_drawer_divide_line" />

        <TextView
            android:id="@id/menu_drawer_display_district"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:drawableLeft="@drawable/menu_drawer_realtime_preview_selector"
            android:drawableStart="@drawable/menu_drawer_realtime_preview_selector"
            android:text="@string/common_drawer_display_district"
            android:textColor="@color/darkviolet" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/menu_drawer_divider_height"
            android:background="@drawable/menu_drawer_divide_line" />

        <TextView
            android:id="@id/menu_drawer_exchange_district"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:drawableLeft="@drawable/menu_drawer_remote_playback_selector"
            android:drawableStart="@drawable/menu_drawer_remote_playback_selector"
            android:text="@string/common_drawer_exchange_district"
            android:textColor="@color/darkviolet" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/menu_drawer_divider_height"
            android:background="@drawable/menu_drawer_divide_line" />

        <TextView
            android:id="@id/menu_drawer_achievement_district"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:drawableLeft="@drawable/menu_drawer_device_management_selector"
            android:drawableStart="@drawable/menu_drawer_device_management_selector"
            android:text="@string/common_drawer_achievement_district"
            android:textColor="@color/darkviolet" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/menu_drawer_divider_height"
            android:background="@drawable/menu_drawer_divide_line" />

        <TextView
            android:id="@id/menu_drawer_system_configure_district"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:drawableLeft="@drawable/menu_drawer_sys_setting_selector"
            android:drawableStart="@drawable/menu_drawer_sys_setting_selector"
            android:text="@string/common_drawer_systemsetting_district"
            android:textColor="@color/darkviolet" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/menu_drawer_divider_height"
            android:background="@drawable/menu_drawer_divide_line" />

        <TextView
            android:id="@id/menu_drawer_contactus_district"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:drawableLeft="@drawable/menu_drawer_alarm_management_selector"
            android:drawableStart="@drawable/menu_drawer_alarm_management_selector"
            android:text="@string/common_drawer_contactus_district"
            android:textColor="@color/darkviolet" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/menu_drawer_divider_height"
            android:background="@drawable/menu_drawer_divide_line" />

        <TextView
            android:id="@id/menu_drawer_social_share_district"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:drawableLeft="@drawable/menu_drawer_picture_management_selector"
            android:drawableStart="@drawable/menu_drawer_picture_management_selector"
            android:text="@string/common_drawer_socialshare_district"
            android:textColor="@color/darkviolet" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/menu_drawer_divider_height"
            android:background="@drawable/menu_drawer_divide_line" />

        <TextView
            android:id="@id/menu_drawer_personal_center"
            style="@style/MenuDrawer.Widget.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:drawableLeft="@drawable/menu_drawer_personal_center_selector"
            android:drawableStart="@drawable/menu_drawer_personal_center_selector"
            android:text="@string/common_drawer_personalcenter_district"
            android:textColor="@color/darkviolet" />
    </LinearLayout>

</ScrollView>